# html

./: Cargo.toml
crates/exp/: Cargo.toml
crates/exp/src/: lib.rs
crates/html/: Cargo.toml
crates/html-bindgen/src/: utils.rs
crates/html-derive/: Cargo.toml
crates/html-derive/src/: expand.rs  lib.rs
crates/html-derive/tests/: compile.rs
crates/html-derive/tests/cases/: basic_success.rs
crates/html-sys/: Cargo.toml
crates/html-sys/src/: lib.rs
crates/html-sys/src/edits/: del.rs  ins.rs
crates/html-sys/src/embedded/: area.rs  audio.rs  embed.rs  iframe.rs  img.rs  map.rs  object.rs  picture.rs  source.rs  track.rs  video.rs
crates/html-sys/src/forms/: button.rs  datalist.rs  fieldset.rs  form.rs  input.rs  label.rs  legend.rs  meter.rs  optgroup.rs  option.rs  output.rs  progress.rs  select.rs  textarea.rs
crates/html-sys/src/interactive/: details.rs  dialog.rs  summary.rs
crates/html-sys/src/metadata/: base.rs  head.rs  link.rs  meta.rs  style.rs  title.rs
crates/html-sys/src/root/: html.rs
crates/html-sys/src/scripting/: canvas.rs  noscript.rs  script.rs  slot.rs  template.rs
crates/html-sys/src/sections/: address.rs  article.rs  aside.rs  body.rs  footer.rs  h1.rs  h2.rs  h3.rs  h4.rs  h5.rs  h6.rs  header.rs  hgroup.rs  nav.rs  section.rs
crates/html-sys/src/tables/: caption.rs  col.rs  colgroup.rs  table.rs  tbody.rs  td.rs  tfoot.rs  th.rs  thead.rs  tr.rs
crates/html-sys/src/text/: a.rs  abbr.rs  b.rs  bdi.rs  br.rs  (+40 more)
crates/html-traits/: Cargo.toml
crates/html-traits/src/: lib.rs
crates/html/src/: lib.rs
design/: web-sys.md
(+2 files in other folders)
