[package]
name = "exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
html = { version = "0.6.2", path = "../html" }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Element",
    "HtmlElement"
]
