[package]
name = "html"
version = "0.6.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Structured HTML encoder"
documentation = "https://docs.rs/html"
homepage = "https://github.com/yoshuawuyts/html"
repository = "https://github.com/yoshuawuyts/html"

[dependencies]
gloo = "0.10.0"
html-sys = { version = "0.4.1", path = "../html-sys" }
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "HtmlElement",
  "Text",
  "DocumentFragment",
]

[dev-dependencies]
indoc = "2"
pretty_assertions = "1"
